# MultimediaRTC

./: .gitignore  CMakeLists.txt
inc/: stdint.h
inc/libavutil/: timestamp.h
lib/: avcodec.lib  avdevice.lib  avfilter.lib  avformat.lib  avutil.lib  postproc.lib  swresample.lib  swscale.lib
src/: CMakeLists.txt  DeviceInfo.cpp  DeviceInfo.h  FFmpegInit.cpp  FFmpegInit.h  MultimediaRTC.cpp
src/ConvertRawData/: CMakeLists.txt  ConverRawData.cpp
src/Decoding/: CMakeLists.txt  decoding.cpp
src/Decoding/DecodeAAC/: CMakeLists.txt  DecodeAAC.cpp
src/Demuxing/: CMakeLists.txt  demuxing.cpp
src/Demuxing/DemuxFLV/: CMakeLists.txt  DemuxFLV.cpp
src/Device/: CMakeLists.txt
src/Device/Camera/: CMakeLists.txt  Camera.cpp
src/Device/Microphone/: CMakeLists.txt  CaptureDevices.cpp  CaptureDevices.h  Microphone.cpp
src/Encoding/: CMakeLists.txt  Encoding.cpp
src/Encoding/EncodeAAC/: CMakeLists.txt  EncodeAAC.cpp
src/Encoding/EncodeH264/: CMakeLists.txt  EncodeH264.cpp
src/Muxing/: CMakeLists.txt  Muxing.cpp
src/Muxing/MuxMP4/: CMakeLists.txt  MuxMP4.cpp
src/TestCase/: CMakeLists.txt  main.cpp
src/Transcoding/: CMakeLists.txt  Transcoding.cpp
